...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdQ-XQ-sAv">
                                        <rect key="frame" x="0.0" y="70" width="334" height="50"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <segue destination="bLx-Hj-qlW" kind="show" id="Gby-xw-vId"/>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kij-EE-0Jf">
                                        <rect key="frame" x="0.0" y="140" width="334" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u9q-oH-1dV">
                                        <rect key="frame" x="0.0" y="70" width="334" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="334" y="7" width="60" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Sign Out"/>
                                <connections>
                                    <action selector="signOutTapped:" destination="w0Y-ja-mLp" eventType="touchUpInside" id="mzC-Ni-6gW"/>
...
                                <rect key="frame" x="376" y="11" width="18" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="plus" catalog="system"/>
                                <connections>
                                    <action selector="performUpdate:" destination="YME-yt-BkJ" eventType="touchUpInside" id="0Yv-E1-0ix"/>
...
                                            <constraint firstAttribute="height" constant="50" id="X3q-h0-t3b"/>
                                        </constraints>
                                        <state key="normal" title="Submit"/>
                                        <connections>
                                            <action selector="saveTapped:" destination="6sJ-aj-k9S" eventType="touchUpInside" id="yLt-Hz-2Oh"/>
...
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L4t-gi-F3Y" sceneMemberID="viewController">
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <tabBarItem key="tabBarItem" title="Meeting" image="person.3" catalog="system" selectedImage="person.3.fill" id="mA7-jc-Fhj"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zwR-5q-n8l">
...
                                <rect key="frame" x="40" y="128" width="334" height="375.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Meeting Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sNU-tO-cmk">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Meeting Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qCN-kM-rkY">
                                        <rect key="frame" x="0.0" y="75" width="334" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bw4-K0-RcX">
                                        <rect key="frame" x="0.0" y="225" width="334" height="30"/>
                                        <state key="normal" title="Select Invitees"/>
                                        <connections>
                                            <segue destination="L4V-Fu-AKe" kind="show" identifier="segInv" id="gVo-Pc-8hB"/>
...
                                <rect key="frame" x="351" y="5" width="43" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TRr-iB-8as" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Chatting" image="chat-icon" selectedImage="chat-filled-icon" id="cep-pq-j6S"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wpr-oK-a9T">
...
                                <rect key="frame" x="40" y="128" width="334" height="209.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Room Name (Optional)" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KkP-Sl-i9y">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
